# optical_turbulence

./: LICENSE  README.md  pyproject.toml
docs/: parameters_expressions.md
src/optical_turbulence/: __decorators.py  __init__.py  _definitions.py  classes.py  earth_models.py  flat_earth.py  parameters.py  ris_models.py  round_earth.py  statistical_models.py  typing.py  utils.py  wind_speed.py
tests/: _test_utilities.py  flat_earth_test.py  ris_models_test.py  round_earth_test.py  statistical_models_test.py
