[project]
name = "optical_turbulence"
version = "1.0.1.dev3"
description = "Optical turbulence expressions"
readme = "README.md"
authors = [
    { name = "Agustin Gonzalez", email = "agustin.gonzalez@fresnel.fr" }
]
requires-python = ">=3.14"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.7",
    "mpmath>=1.3.0",
    "numpy>=2.3.5",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"
